Instrumented for the GNU Build System
version.h was replaced by info stored in config.h

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,13 @@ nbproject/
 miniresizer.cpp
 miniresizer.hpp
 .dep.inc
+config/
+autom4te.cache/
+aclocal.m4
+configure
+Makefile.in
+src/Makefile.in
+Makefile
+src/Makefile
+config.h.in
+config.h
