--- a/src/res/desktop/miniresizer.desktop
+++ b/src/res/desktop/miniresizer.desktop
@@ -6,7 +6,7 @@ GenericName=Video resize helper
 GenericName[it]=Strumento per il ridimensionamento dei filmati
 Comment=Calculate video crop/resize parameters
 Comment[it]=Calcola il ritaglio/ridimensionamento di un filmato
-Exec=miniresizer
+Exec=miniresizer %f
 Terminal=false
 Type=Application
 MimeType=video/mpeg;video/mp4;video/msvideo;video/x-msvideo;video/avi;video/x-matroska;video/mp2t;video/mp2p;video/mpv;video/ogg;video/x-ogm+ogg;
