--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,7 @@
-build/
+build*/
 dist/
-nbproject/
-!nbproject/configurations.xml
-!nbproject/project.xml
 miniresizer.cpp
 miniresizer.hpp
-.dep.inc
 config/
 autom4te.cache/
 aclocal.m4
@@ -16,3 +12,8 @@ Makefile
 src/Makefile
 config.h.in
 config.h
+src/*.o
+stamp-h1
+src/.deps/
+src/miniresizer
+config.*
