--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,11 @@
-build*/
-dist/
 miniresizer.cxx
 miniresizer.h
-config/
-autom4te.cache/
-aclocal.m4
-configure
-Makefile.in
-src/Makefile.in
-Makefile
-src/Makefile
-config.h.in
 config.h
-src/*.o
-stamp-h1
-src/.deps/
-src/miniresizer
-config.*
+*.o
+miniresizer
 *.cmake
 CMakeFiles/
 CMakeCache.txt
+*.exe
+*.obj
+Makefile
