Handle both FFMPEG pre-3.1 and 3.1+
Part of the public API used by the RGBFrameReader was deprecated starting with
FFMPEG 3.1, but many systems still ship with version 2.8. For those, we still
compile against the deprecated API.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -18,17 +18,6 @@ if("${OPTION_ENABLE_FILTERGRAPH}" STREQUAL "wordexp")
     endif()
 endif()
 
-#[[
-find_library_or_exit(LIBAVCODEC avcodec)
-find_library_or_exit(LIBAVFORMAT avformat)
-find_library_or_exit(LIBSWSCALE swscale)
-find_library_or_exit(LIBAVUTIL avutil)
-
-find_path_or_exit(FFMPEG_INCLUDE_DIR avcodec.h PATH_SUFFIXES libavcodec)
-eet_filename_component(FFMPEG_INCLUDE_DIR ${FFMPEG_INCLUDE_DIR} DIRECTORY CACHE)
-set(FFMPEG_LIBRARY ${LIBAVCODEC} ${LIBAVFORMAT} ${LIBAVUTIL} ${LIBSWSCALE})
-]]
-
 find_package(FFMPEG MODULE REQUIRED COMPONENTS avformat avutil swscale avcodec)
 
 set(FLTK_SKIP_OPENGL ON)
@@ -45,8 +34,6 @@ fltk_wrap_ui(miniresizer preview.fld resize.fld)
 set(PACKAGE_NAME "${PROJECT_NAME}")
 set(PACKAGE_STRING "${PROJECT_NAME} ${PROJECT_VERSION}")
 
-configure_file(config.h.in config.h)
-
 set(SOURCES
     Common.cpp
     PreviewWindow.cpp
@@ -62,12 +49,9 @@ target_link_libraries(fltk_lib INTERFACE "${FLTK_LIBRARY}")
 
 add_library(fltk_ui OBJECT ${miniresizer_FLTK_UI_SRCS})
 
-#[[
-add_library(ffmpeg INTERFACE)
-target_include_directories(ffmpeg INTERFACE "${FFMPEG_INCLUDE_DIR}")
-target_link_libraries(ffmpeg INTERFACE "${FFMPEG_LIBRARY}")
-#target_compile_options(ffmpeg INTERFACE -Wno-deprecated-declarations)
-]]
+include(FFMPEGNewAVCodecAPI)
+
+configure_file(config.h.in config.h)
 
 add_executable(miniresizer ${SOURCES} $<TARGET_OBJECTS:fltk_ui>)
 target_link_libraries(miniresizer PRIVATE
