--- a/src/config.h.in
+++ b/src/config.h.in
@@ -1,4 +1,5 @@
 #cmakedefine HAVE_WORDEXP_H
 #cmakedefine ENABLE_FILTERGRAPH
+#cmakedefine USE_NEW_AVCODEC_API
 #cmakedefine PACKAGE_NAME "@PACKAGE_NAME@"
 #cmakedefine PACKAGE_STRING "@PACKAGE_STRING@"
