--- a/src/config.h.in
+++ b/src/config.h.in
@@ -1,5 +1,6 @@
 #cmakedefine HAVE_WORDEXP_H
 #cmakedefine ENABLE_FILTERGRAPH
-#cmakedefine USE_NEW_AVCODEC_API
+#cmakedefine FFMPEG_USE_NEW_AVCODEC_API
+#cmakedefine FFMPEG_CALL_AV_REGISTER_ALL
 #cmakedefine PACKAGE_NAME "@PACKAGE_NAME@"
 #cmakedefine PACKAGE_STRING "@PACKAGE_STRING@"
