--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,12 @@
 cmake_minimum_required(VERSION 3.3)
 
+# The project is written in C++, but the C compiler is nneded for some tests
+# against FFMPEG.
 project(
     miniresizer
     DESCRIPTION "Calculate video crop/resize parameters"
     VERSION 0.0.8
-    LANGUAGES CXX
+    LANGUAGES C CXX
 )
 
 add_subdirectory(src)
